cmake_minimum_required(VERSION 2.8)
project(test_cmake CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(stack_queue stack_queue.cpp)
add_executable(abc081a abc081a.cpp)
add_executable(abc087b abc087b.cpp)
add_executable(abc083b abc083b.cpp)
add_executable(abc088b abc088b.cpp)
add_executable(abc085b abc085b.cpp)
add_executable(abc085c abc085c.cpp)
add_executable(abc049c abc049c.cpp)
add_executable(abc086c abc086c.cpp)
add_executable(arc004_1 arc004_1.cpp)
add_executable(abc103_d abc103_d.cpp)
add_executable(abc076_c abc076_c.cpp)
add_executable(ants_2_3 ants_2_3.cpp)
add_executable(edpc_a edpc_a.cpp)
add_executable(edpc_b edpc_b.cpp)
add_executable(abc149_a abc149_a.cpp)
add_executable(abc149_b abc149_b.cpp)
add_executable(abc149_c abc149_c.cpp)
add_executable(abc149_d abc149_d.cpp)
add_executable(abc138_a abc138_a.cpp)
add_executable(abc138_b abc138_b.cpp)
add_executable(abc138_c abc138_c.cpp)
add_executable(abc138_d abc138_d.cpp)
add_executable(edpc_c edpc_c.cpp)
add_executable(abc151_a abc151_a.cpp)
add_executable(abc151_b abc151_b.cpp)
add_executable(abc151_c abc151_c.cpp)
add_executable(abc151_d abc151_d.cpp)
