cmake_minimum_required(VERSION 2.8)
project(atcoder CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(stack_queue stack_queue.cpp)
add_executable(abc081a abc081a.cpp)
add_executable(abc087b abc087b.cpp)
add_executable(abc083b abc083b.cpp)
add_executable(abc088b abc088b.cpp)
add_executable(abc085b abc085b.cpp)
add_executable(abc085c abc085c.cpp)
add_executable(abc049c abc049c.cpp)
add_executable(abc086c abc086c.cpp)
add_executable(arc004_1 arc004_1.cpp)
add_executable(abc103_d abc103_d.cpp)
add_executable(abc076_c abc076_c.cpp)
add_executable(ants_2_3 ants_2_3.cpp)
add_executable(edpc_a edpc_a.cpp)
add_executable(edpc_b edpc_b.cpp)
add_executable(abc149_a abc149_a.cpp)
add_executable(abc149_b abc149_b.cpp)
add_executable(abc149_c abc149_c.cpp)
add_executable(abc149_d abc149_d.cpp)
add_executable(abc138_a abc138_a.cpp)
add_executable(abc138_b abc138_b.cpp)
add_executable(abc138_c abc138_c.cpp)
add_executable(abc138_d abc138_d.cpp)
add_executable(edpc_c edpc_c.cpp)
add_executable(abc151_a abc151_a.cpp)
add_executable(abc151_b abc151_b.cpp)
add_executable(abc151_c abc151_c.cpp)
add_executable(abc151_d abc151_d.cpp)
add_executable(abc152_a abc152_a.cpp)
add_executable(abc152_b abc152_b.cpp)
add_executable(abc152_c abc152_c.cpp)
add_executable(abc152_d abc152_d.cpp)
add_executable(abc153_a abc153_a.cpp)
add_executable(abc153_b abc153_b.cpp)
add_executable(abc153_c abc153_c.cpp)
add_executable(abc153_d abc153_d.cpp)
add_executable(abc153_e abc153_e.cpp)
add_executable(abc154_a abc154_a.cpp)
add_executable(abc154_b abc154_b.cpp)
add_executable(abc154_c abc154_c.cpp)
add_executable(abc154_d abc154_d.cpp)
add_executable(abc156_a abc156_a.cpp)
add_executable(abc156_b abc156_b.cpp)
add_executable(abc156_c abc156_c.cpp)
add_executable(abc156_d abc156_d.cpp)
add_executable(abc156_e abc156_e.cpp)
